--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Timer",
-  "name": "Timer App",
+  "short_name": "SNAAC Timer",
+  "name": "SNAAC Timer App",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
